--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,12 @@ body {
   font-family: "Inter", sans-serif;
   background-color: #FBD7C1;
 }
+
+.app-container {
+	display: flex;
+	width: 100%;
+  }
+
+  .app-content {
+	width: 50%;
+  }
