--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,23 @@
 #app {
   height: 100vh;
   font-family: "Inter", sans-serif;
-  background-color: #FBD7C1;
+  background-color: #231E1B;
   overflow: hidden;
 }
 
 .app-container {
-	display: flex;
-	width: 100%;
-	height: 100%;
-  }
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
 
-  .app-content {
-	width: 50%;
-  }
+.app-content {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+svg {
+  min-width: 32px;
+  min-height: 32px;
+}
